--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -38,7 +38,25 @@
             <a href="#" style="background: #ff0000" class="link">
                 <i class='bx bxl-youtube'></i>
             </a>
+        </div>
+        <div class="buttons">
+            <button class="button">Subscribe</button>
+            <button class="button">Message</button>
+        </div>
 
+        <div class="analytics">
+            <div class="data">
+                <i class='bx bx-heart'></i>
+                <span class="number">60k</span>
+            </div>
+            <div class="data">
+                <i class='bx bx-message-rounded'></i>
+                <span class="number">30k</span>
+            </div>
+            <div class="data">
+                <i class='bx bx-share' ></i>
+                <span class="number">20k</span>
+            </div>
         </div>
 
     </div>
